test/Fail/AnonymousRecConstrParse.agda
module AnonymousRecConstrParse where

_ = constructor
