test/Fail/AnonymousRecConstrParse.err
AnonymousRecConstrParse.agda:3.5: error: [ParseError]
constructor<ERROR> 
...
